--- a/Code/static/css/basedesign.css
+++ b/Code/static/css/basedesign.css
@@ -1,7 +1,13 @@
 body {
-background-color: floralwhite;
+background-color: whitesmoke;
 /*background:linear-gradient(to bottom, #004aad, #00549d, #005681, #005464, #2f4f4f); ;
    /* background: linear-gradient(to bottom, #004aad, #00549d, #005681, #005464, #2f4f4f);
 
  /* background-image: linear-gradient(to bottom, #004aad, #00549d, #005681, #005464, #2f4f4f);*/
+}
+#footer{
+    background-color: firebrick;
+
+#link {
+color=white;}
 }
