--- a/Code/templates/base.html
+++ b/Code/templates/base.html
@@ -45,7 +45,7 @@
                 </a>
             </li>
 
-            <li class="nav-item active">
+            <li class="nav-item">
                 <a class="nav-link" href="/about">About <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
@@ -59,22 +59,22 @@
                     Experience
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="/experience">Education</a>
-                    <a class="dropdown-item" href="/experience">Work</a>
-                    <a class="dropdown-item" href="/experience">Projects</a>
+                    <a class="dropdown-item" href="/experience#education">Education</a>
+                    <a class="dropdown-item" href="/experience#work">Work</a>
+                    <a class="dropdown-item" href="/experience#academicsocieties">Academic Societies</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="/experience">Other</a>
+                    <a class="dropdown-item" href="/projects">Projects</a>
                 </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Connect</a>
+                <a class="nav-link" href="/connect">Connect</a>
             </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
 
 
-            <a href="static/martin-resume.pdf" class="button">
-                <button type="button" class="btn btn-secondary">Resume</button>
+            <a href="static/martin-resume.pdf">
+              <button type="button" class="btn btn-secondary">My Resume</button>
             </a>
 
         </form>
@@ -84,13 +84,15 @@
 {% block body %}{% endblock %}
 
 
+
 <!-- Footer -->
+
 <footer class="page-footer font-small special-color-dark pt-4 bg-blue" style="background-color: #004aad" ;">
 
-  <!-- Footer Elements -->
   <div class="container">
 
     <!-- Social buttons -->
+
     <ul class="list-unstyled list-inline text-center">
        <li class="list-inline-item">
 
@@ -119,18 +121,21 @@
     </ul>
     <!-- Social buttons -->
 
-  </div>
+ </div>
   <!-- Footer Elements -->
 
-  <!-- Copyright -->
+
   <div class="footer-copyright text-center py-3">
     <a href="https://github.com/martinsenecal">
         <p id="link"> © 2020 Copyright: Designed & Built by Martin Senécal </p>
     </a>
   </div>
 
-
 </footer>
+
+<!-- Footer -->
+
+
 
 </body>
 
