--- a/Code/templates/home.html
+++ b/Code/templates/home.html
@@ -4,11 +4,25 @@
 
 {% block title %} Home {% endblock %}
 {% block body %}
-<h6>Hello World, my name is</h6>
-<h1>Martin Senécal.</h1>
-<h4>I'm a software engineering student at Concordia University based in Montreal, Canada.
-I am currently seeking an internship for Fall 2020. I like to learn while stepping out of my
-    comfort zone to solve complex problems. </h4>
 
-<button>Let's Connect!</button>
+<div class="container">
+
+<br>
+    <br>
+    <header class="jumbotron my-4">
+        <h4 class="display-6 text-dark">Hello World, my name is</h4>
+        <p class="display-2 text-dark">Martin Senécal</p>
+
+        <p class="display-5 lead text-dark">I'm a software engineering student at Concordia University based in Montreal, Canada.</p>
+        <p class="lead text-dark">
+            I am currently seeking an internship for Fall 2020. I like to learn while stepping out of my
+            comfort zone to solve complex problems.</p>
+
+        <a href="/about" class="btn btn-primary btn-lg">Let's Explore!</a>
+    </header>
+<br>
+    <br>
+</div>
+
 {% endblock %}
+
