--- a/Code/templates/skills.html
+++ b/Code/templates/skills.html
@@ -5,12 +5,12 @@
 {% block title %} Skills {% endblock %}
 {% block body %}
 
-    <h4 id="skillsTitle">Here are a few of my skills:</h4><br>
+
 
 
     <div class="container">
-
-
+ <div class="jumbotron my-4 ">
+ <h4 id="skillsTitle">Here are a few of my skills:</h4><br>
         <h5>Technical Skills</h5>
         <table class="table table-hover">
             <thead>
@@ -99,6 +99,7 @@
 
             </tbody>
         </table>
+ </div>
     </div>
 
 {% endblock %}
