--- a/Code/static/css/basedesign.css
+++ b/Code/static/css/basedesign.css
@@ -1,6 +1,8 @@
 body {
-background-color: whitesmoke;
-/*background:linear-gradient(to bottom, #004aad, #00549d, #005681, #005464, #2f4f4f); ;
+background-color:  #333;
+box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5)
+
+/*background:linear-gradient(to right, #004aad, #00549d, #005681, #005464, #2f4f4f);
    /* background: linear-gradient(to bottom, #004aad, #00549d, #005681, #005464, #2f4f4f);
 
  /* background-image: linear-gradient(to bottom, #004aad, #00549d, #005681, #005464, #2f4f4f);*/
@@ -10,4 +12,18 @@ background-color: whitesmoke;
 
 #link {
 color=white;}
+}
+
+h1,h2,h3,h4,h5,h6,h7,li,a,td,thead,p{
+    color:black;
+
+}
+hr{
+    background-color:  #004aad;
+    height: 2px;
+}
+.button{
+    background-color:  #333;
+    box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
+
 }
