--- a/Code/templates/connect.html
+++ b/Code/templates/connect.html
@@ -5,7 +5,7 @@
 
 {% block css %}{% endblock css %}
 
-{% block title %} Home {% endblock %}
+{% block title %} Connect {% endblock %}
 {% block body %}
 
     <div class="container">
@@ -19,41 +19,55 @@
                     you can
                     enter your email, and I will send it to you right away.</p>
 
+                <div id="formEmail">
+                <form class="form-inline">
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" placeholder="Enter email" name="email">
+
+                    <button type="submit">Submit</button>
+
+
+                </form>
+                </div>
                 <p class="lead font-weight-normal text-justify">If you are curious or want to know more about me, don't
                     be shy and go
                     talk to Marty! It's my own chat-bot to help you find quick information about me.</p>
-                <a class="btn btn-outline-secondary justify-content-center" href="#">Coming soon</a>
 
+
+                <div class="btncenter">
+                    <button onclick="window.location.href = '/chatbot';" type="button" id="btnchatbot">Marty:ChatBot</button>
+                </div>
+
+                <br>
                 <p class="lead font-weight-normal text-justify">To stay connected: </p>
 
-                <ul class="list-unstyled  text-center">
-                    <li>
-                        <a href="https://www.linkedin.com/in/martin-senecal/">
-                            <i class="fab fa-linkedin-in fa-lg"> Linkedin profile </i>
-                        </a>
-                    </li>
-                     <li>
-                        <a href="mailto:martinsenecal2000@gmail.com">
-                            <i class="fas fa-envelope-square fa-lg"> martinsenecal2000@gmail.com</i>
-                        </a>
+                <div id="iconcontact">
+                    <ul class="list-unstyled  text-center">
+                        <li>
+                            <a href="https://www.linkedin.com/in/martin-senecal/">
+                                <i class="fab fa-linkedin-in fa-lg"> Linkedin profile </i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="mailto:martinsenecal2000@gmail.com">
+                                <i class="fas fa-envelope-square fa-lg"> martinsenecal2000@gmail.com</i>
+                            </a>
 
-                    </li>
-                    <li>
-                        <a href="https://github.com/martinsenecal">
-                            <i class="fab fa-github fa-lg"> GitHub profile </i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.facebook.com/martin.seneca1">
-                            <i class="fab fa-facebook fa-lg"> Facebook profile</i>
-                        </a>
-                    </li>
+                        </li>
+                        <li>
+                            <a href="https://github.com/martinsenecal">
+                                <i class="fab fa-github fa-lg"> GitHub profile </i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.facebook.com/martin.seneca1">
+                                <i class="fab fa-facebook fa-lg"> Facebook profile</i>
+                            </a>
+                        </li>
 
 
-
-
-                </ul>
-
+                    </ul>
+                </div>
 
             </div>
 
