--- a/Code/templates/experience.html
+++ b/Code/templates/experience.html
@@ -104,9 +104,9 @@
                     <li>Produced a 20 min documentary by leading a crowd-funding campaign, organizing a premiere, and filming
                         people at the age of 14 years old.
                     </li>
-                    <li>Directed an award winning short film while leading a team of 6 people. <a href="https://www.youtube.com/watch?v=DKX8Kj0apNI&t=3s">(link).</a>
+                    <li>Directed an award winning short film while leading a team of 6 people. <a class="colorLink" href="https://www.youtube.com/watch?v=DKX8Kj0apNI&t=3s">(link).</a>
                     </li>
-                     <li>Filmed <a href="https://www.youtube.com/watch?v=VMzfZBEQPXs&list=PL-yR4TJNG_3jbudY21DvddcPtceDmYIKc">promotional videos </a> for Desjardins, Ministry of Education, and College Beaubois.
+                     <li>Filmed <a class="colorLink" href="https://www.youtube.com/watch?v=VMzfZBEQPXs&list=PL-yR4TJNG_3jbudY21DvddcPtceDmYIKc">promotional videos </a> for Desjardins, Ministry of Education, and College Beaubois.
                     </li>
                 </ul>
             </div>
@@ -139,7 +139,7 @@
                 <p>Montreal, Canada</p>
                 <p>October 2019 - Present</p>
                 <ul>
-                    <li>Worked with a team of 20 student to create the <a href="https://conuhacks.io/">biggest hackathon in Montreal</a> and raised a total of
+                    <li>Worked with a team of 20 student to create the <a class="colorLink"  href="https://conuhacks.io/">biggest hackathon in Montreal</a> and raised a total of
                         <strong>115 000$</strong> through company outreach.
                     </li>
                     <li>Ensured companies extract value from the experience.
