--- a/Code/static/css/basedesign.css
+++ b/Code/static/css/basedesign.css
@@ -7,16 +7,26 @@ box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5)
 
  /* background-image: linear-gradient(to bottom, #004aad, #00549d, #005681, #005464, #2f4f4f);*/
 }
-#footer{
+#footer {
     background-color: firebrick;
-
-#link {
-color=white;}
 }
 
-h1,h2,h3,h4,h5,h6,h7,li,a,td,thead,p{
+#footertext{
+color:white;
+#link {
+color: white;
+
+}
+
+h1,h2,h3,h4,h5,h6,h7,td,thead,p{
     color:black;
 
+}
+i{
+color:white;}
+}
+a{
+   color: white;
 }
 hr{
     background-color:  #004aad;
@@ -26,4 +36,11 @@ hr{
     background-color:  #333;
     box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
 
+}
+
+#footersticky{
+    /*position: fixed;
+   left: 0;
+   bottom: 0;
+   width: 100%;*/
 }
