--- a/Code/static/css/extradesign.css
+++ b/Code/static/css/extradesign.css
@@ -42,7 +42,82 @@
   width:15vw;
 
 }
+.colorLink{
+  color: #004aad;
+}
 #textContact{
   margin-left: 8vw;
   margin-right: 8vw;
+}
+
+#iconcontact{
+  background-color: #333333;
+  border-radius: 5px;
+}
+.btncenter{
+  text-align: center;
+}
+#btnchatbot{
+   background-color: white;
+  color: black;
+  border: 2px solid #004aad;
+  transition-duration: 0.4s;
+  border-radius: 2px;
+  height: 40px;
+
+
+}
+#btnchatbot:hover{
+   background-color: #004aad;
+  color: white;
+}
+
+
+#formEmail{
+margin-left: 15vw;
+}
+/* Style the form - display items horizontally */
+.form-inline {
+  display: flex;
+  flex-flow: row wrap;
+  align-items: center;
+}
+
+/* Add some margins for each label */
+.form-inline label {
+  margin: 5px 10px 5px 0;
+}
+
+/* Style the input fields */
+.form-inline input {
+  vertical-align: middle;
+  margin: 5px 10px 5px 0;
+  padding: 10px;
+  background-color: #fff;
+  border: 1px solid #ddd;
+}
+
+/* Style the submit button */
+.form-inline button {
+  padding: 10px 20px;
+  background-color: #004aad;
+  border: 2px solid #ddd;
+  color: white;
+  border-radius: 2px;
+}
+
+.form-inline button:hover {
+  background-color: royalblue;
+}
+
+/* Add responsiveness - display the form controls vertically instead of horizontally on screens that are less than 800px wide */
+@media (max-width: 800px) {
+  .form-inline input {
+    margin: 10px 0;
+  }
+
+  .form-inline {
+    flex-direction: column;
+    align-items: stretch;
+  }
 }
