--- a/Code/templates/base.html
+++ b/Code/templates/base.html
@@ -17,10 +17,10 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <!-- Add icon library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+    <script src="https://kit.fontawesome.com/e319096bd7.js" crossorigin="anonymous"></script>
     <!-- My own CSS Files-->
     <link rel="stylesheet" href="/static/css/basedesign.css">
-    <script src="https://kit.fontawesome.com/e319096bd7.js" crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="/static/css/extradesign.css">
 
     {% block css %}{% endblock %}
@@ -30,7 +30,7 @@
 <body>
 
 
-<nav class="navbar navbar-expand-lg navbar-light bg-blue" style="background-color: #004aad" ;>
+<nav class="navbar navbar-expand-lg navbar-dark bg-blue" style="background-color: #004aad" ;>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
             aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -74,7 +74,7 @@
 
 
             <a href="static/martin-resume.pdf">
-              <button type="button" class="btn btn-secondary">My Resume</button>
+                <button type="button" class="btn btn-secondary">My Resume</button>
             </a>
 
         </form>
@@ -84,57 +84,62 @@
 {% block body %}{% endblock %}
 
 
-
 <!-- Footer -->
+ <div id="footersticky">
+<footer class="page-footer font-small special-color-dark pt-3 bg-blue" style="background-color: #004aad" ;
+">
 
-<footer class="page-footer font-small special-color-dark pt-4 bg-blue" style="background-color: #004aad" ;">
+<div class="container">
 
-  <div class="container">
+        <!-- Social buttons -->
 
-    <!-- Social buttons -->
+        <ul class="list-unstyled list-inline text-center">
+            <li class="list-inline-item">
 
-    <ul class="list-unstyled list-inline text-center">
-       <li class="list-inline-item">
-
-          <i class="fab fa-linkedin-in"> </i>
-
-      </li>
-         <li class="list-inline-item">
-
-          <i class="fab fa-github"> </i>
-
-      </li>
-        <li class="list-inline-item">
-
-          <i class="fab fa-facebook-f"> </i>
-
-      </li>
-
-      <li class="list-inline-item">
-
-           <i class="fas fa-envelope-open-text"></i>
+                <a href="https://www.linkedin.com/in/martin-senecal/">
+                    <i class="fab fa-linkedin-in"> </i>
+                </a>
 
 
-      </li>
+            </li>
+            <li class="list-inline-item">
+                <a href="https://github.com/martinsenecal">
+                    <i class="fab fa-github"> </i>
+                </a>
 
 
-    </ul>
-    <!-- Social buttons -->
+            </li>
+            <li class="list-inline-item">
+                <a href="https://www.facebook.com/martin.seneca1">
+                    <i class="fab fa-facebook-f"> </i>
+                </a>
+            </li>
 
- </div>
-  <!-- Footer Elements -->
+            <li class="list-inline-item">
+                <a href="mailto:martinsenecal2000@gmail.com">
+                    <i class="fas fa-envelope-open-text"></i>
+                </a>
 
 
-  <div class="footer-copyright text-center py-3">
+            </li>
+
+
+        </ul>
+        <!-- Social buttons -->
+
+</div>
+<!-- Footer Elements -->
+
+
+<div class="footer-copyright text-center py-2">
     <a href="https://github.com/martinsenecal">
-        <p id="link"> © 2020 Copyright: Designed & Built by Martin Senécal </p>
+        <p id="footertext"> © 2020 Copyright: Designed & Built by Martin Senécal </p>
     </a>
-  </div>
+</div>
 
 </footer>
-
+ </div>
 <!-- Footer -->
-
 
 
 </body>
