--- a/Code/templates/about.html
+++ b/Code/templates/about.html
@@ -7,31 +7,39 @@
 {% block title %} About {% endblock %}
 {% block body %}
 
-    <div class="container">
+        <div class="container">
 
- <div class="jumbotron my-4 ">
-       <img id="profileImage" src="static/images/profilepic.jpg" alt="Profile Picture">
+            <div class="jumbotron my-4 ">
+                <img id="profileImage" src="static/images/profilepic.jpg" alt="Profile Picture">
 
-        <div id="aboutMe">
+                <div id="aboutMe">
 
-            <h2>About Martin Senécal</h2>
+                    <h2>About Martin Senécal</h2>
 
-            <p id="pProfile"> Hello World, my name is Martin. I study software engineering at Concordia University,
-                Montreal and I love it!
-                <br><br> I love to fill up my life with learning new things, doing some hackathon, helping people, and
-                of course Software Engineering.
-                However when I have some time, I love to see my friends, do some sport outside or even just watch some
-                good TV Show.
-                <br><br> This website exists as a way to show you the things I am working on. It's going to be a work in
-                progress, since
-                it's my first website.<br><br> Now that you know a little about me. Take a peek around!<br><br> Thank
-                you for visiting!<br><br>
-                Martin Senécal</p>
- </div>
+                    <p id="pProfile"> Hello World, my name is Martin. I study software engineering at Concordia University,
+                        Montreal and I love it!
+                        <br><br> I love to fill up my life with learning new things, doing some hackathon, helping people,
+                        and
+                        of course Software Engineering.
+                        However when I have some time, I love to see my friends, do some sport outside or even just watch
+                        some
+                        good TV Show.
+                        <br><br> This website exists as a way to show you the things I am working on. It's going to be a
+                        work in
+                        progress, since
+                        it's my first website.<br><br> Now that you know a little about me. Take a peek around!<br><br>
+                        Thank
+                        you for visiting!<br><br>
+                        Martin Senécal</p>
+                </div>
 
 
+            </div>
         </div>
-    </div>
+
+
+
+
 
 
 
