--- a/Code/templates/connect.html
+++ b/Code/templates/connect.html
@@ -19,7 +19,7 @@
                     you can
                     enter your email, and I will send it to you right away.</p>
 
-                <div id="formEmail">
+                <span id="formEmail">
                 <form class="form-inline">
                     <label for="email">Email:</label>
                     <input type="email" id="email" placeholder="Enter email" name="email">
@@ -28,13 +28,13 @@
 
 
                 </form>
-                </div>
+                </span>
                 <p class="lead font-weight-normal text-justify">If you are curious or want to know more about me, don't
                     be shy and go
                     talk to Marty! It's my own chat-bot to help you find quick information about me.</p>
 
 
-                <div class="btncenter">
+                <div id="btncenter">
                     <button onclick="window.location.href = '/chatbot';" type="button" id="btnchatbot">Marty:ChatBot</button>
                 </div>
 
