--- a/Code/static/css/designbot.css
+++ b/Code/static/css/designbot.css
@@ -3,15 +3,24 @@
   margin: 0 auto;
   max-width: 800px;
   padding: 0 20px;
-  margin-bottom: 5vw;
-  margin-top: 2vw;
-  border-radius: 5px;
+
+  margin-bottom: 4vw;
+
+  border-radius: 10px;
   background-color: #004aad;
+
+
+}
+.messagesgrouping{
+   overflow-y: scroll;
+  height: 300px;
 }
 #chatbotheader{
-  margin-bottom: 3vw;
+  margin: 0 auto;
+  max-width: 800px;
+  padding: 0 20px;
+  margin-bottom: 2vw;
   margin-top: 2vw;
-  margin-left: 20vw;
   border-radius: 5px;
   background-color: white;
   width: 40vw;
@@ -58,4 +67,8 @@
 .time-left {
   float: left;
   color: #999;
+}
+#chatdivider{
+  background-color: white;
+  height: 1px;
 }
