--- a/Code/templates/skills.html
+++ b/Code/templates/skills.html
@@ -10,7 +10,8 @@
 
     <div class="container">
  <div class="jumbotron my-4 ">
- <h4 id="skillsTitle">Here are a few of my skills:</h4><br>
+     <h3 id="skillsTitle"><u><strong>Here are a few of my skills:</strong></u></h3>
+     <br>
         <h5>Technical Skills</h5>
         <table class="table table-hover">
             <thead>
@@ -77,12 +78,7 @@
 
           <h5>Soft Skills</h5>
         <table class="table table-hover">
-            <thead>
-            <tr>
-                <th colspan="2">Strong:</th>
 
-
-            </tr>
             <tbody>
             <tr>
                 <td>Leadership</td>
