--- a/Code/static/css/extradesign.css
+++ b/Code/static/css/extradesign.css
@@ -32,10 +32,12 @@
 
 }
 .elementExperience{
-  width: 50vw;
+  width: auto;
   text-align: justify;
   margin-top: 10px;
-  margin-left: 15vw;
+  margin-left: 12vw;
+    margin-right: 12vw;
+
 }
 #headingExperience{
   margin-top: 2vw;
