--- a/Code/static/css/basedesign.css
+++ b/Code/static/css/basedesign.css
@@ -1,6 +1,7 @@
 body {
 background-color:  #333;
-box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5)
+box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
+    display: block;
 
 /*background:linear-gradient(to right, #004aad, #00549d, #005681, #005464, #2f4f4f);
    /* background: linear-gradient(to bottom, #004aad, #00549d, #005681, #005464, #2f4f4f);
@@ -11,8 +12,11 @@ box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5)
     background-color: firebrick;
 }
 
-#footertext{
-color:white;
+#footertext {
+    color: white;
+
+}
+
 #link {
 color: white;
 
@@ -22,9 +26,11 @@ h1,h2,h3,h4,h5,h6,h7,td,thead,p{
     color:black;
 
 }
+
 i{
 color:white;}
-}
+
+
 a{
    color: white;
 }
@@ -39,8 +45,8 @@ hr{
 }
 
 #footersticky{
-    /*position: fixed;
+    position: relative;
    left: 0;
    bottom: 0;
-   width: 100%;*/
+   width: 100%;
 }
