--- a/Code/templates/connect.html
+++ b/Code/templates/connect.html
@@ -19,7 +19,7 @@
                     you can
                     enter your email, and I will send it to you right away.</p>
 
-                <span id="formEmail">
+                <div id="formEmail">
                 <form class="form-inline">
                     <label for="email">Email:</label>
                     <input type="email" id="email" placeholder="Enter email" name="email">
@@ -28,7 +28,8 @@
 
 
                 </form>
-                </span>
+                </div>
+
                 <p class="lead font-weight-normal text-justify">If you are curious or want to know more about me, don't
                     be shy and go
                     talk to Marty! It's my own chat-bot to help you find quick information about me.</p>
