Modify UI/Cleaner Codes
-Delete some useless codes.
-Modify UI of Skills
-Add title for pages.

--- a/Code/templates/base.html
+++ b/Code/templates/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}{% endblock %}</title>
+    <title>{% block title %} Martin {% endblock %}</title>
 
     <!--Bootstrap-->
     <!-- Latest compiled and minified CSS -->
@@ -85,47 +85,46 @@
 
 
 <!-- Footer -->
- <div id="footersticky">
-<footer class="page-footer font-small special-color-dark pt-3 bg-blue" style="background-color: #004aad" ;
-">
+
+<footer class="font-small pt-3 bg-blue footersticky" style="background-color: #004aad" ;">
 
 <div class="container">
 
-        <!-- Social buttons -->
+    <!-- Social buttons -->
 
-        <ul class="list-unstyled list-inline text-center">
-            <li class="list-inline-item">
+    <ul class="list-unstyled list-inline text-center">
+        <li class="list-inline-item">
 
-                <a href="https://www.linkedin.com/in/martin-senecal/">
-                    <i class="fab fa-linkedin-in"> </i>
-                </a>
-
-
-            </li>
-            <li class="list-inline-item">
-                <a href="https://github.com/martinsenecal">
-                    <i class="fab fa-github"> </i>
-                </a>
+            <a href="https://www.linkedin.com/in/martin-senecal/">
+                <i class="fab fa-linkedin-in"> </i>
+            </a>
 
 
-            </li>
-            <li class="list-inline-item">
-                <a href="https://www.facebook.com/martin.seneca1">
-                    <i class="fab fa-facebook-f"> </i>
-                </a>
-            </li>
-
-            <li class="list-inline-item">
-                <a href="mailto:martinsenecal2000@gmail.com">
-                    <i class="fas fa-envelope-open-text"></i>
-                </a>
+        </li>
+        <li class="list-inline-item">
+            <a href="https://github.com/martinsenecal">
+                <i class="fab fa-github"> </i>
+            </a>
 
 
-            </li>
+        </li>
+        <li class="list-inline-item">
+            <a href="https://www.facebook.com/martin.seneca1">
+                <i class="fab fa-facebook-f"> </i>
+            </a>
+        </li>
+
+        <li class="list-inline-item">
+            <a href="mailto:martinsenecal2000@gmail.com">
+                <i class="fas fa-envelope-open-text"></i>
+            </a>
 
 
-        </ul>
-        <!-- Social buttons -->
+        </li>
+
+
+    </ul>
+    <!-- Social buttons -->
 
 </div>
 <!-- Footer Elements -->
@@ -138,7 +137,7 @@
 </div>
 
 </footer>
- </div>
+
 <!-- Footer -->
 
 
