--- a/Code/templates/chatbot.html
+++ b/Code/templates/chatbot.html
@@ -6,7 +6,7 @@
 
 {% endblock css %}
 
-{% block title %} ChatBot {% endblock %}
+{% block title %} {{ super() }} - ChatBot {% endblock %}
 {% block body %}
 
 
