--- a/Code/templates/connect.html
+++ b/Code/templates/connect.html
@@ -5,7 +5,7 @@
 
 {% block css %}{% endblock css %}
 
-{% block title %} Connect {% endblock %}
+{% block title %} {{ super() }} - Connect {% endblock %}
 {% block body %}
 
     <div class="container">
