--- a/Code/templates/home.html
+++ b/Code/templates/home.html
@@ -2,7 +2,7 @@
 
 {% block css %}{% endblock css %}
 
-{% block title %} Home {% endblock %}
+{% block title %} {{ super() }} - Home {% endblock %}
 {% block body %}
 
 <div class="container">
