--- a/Code/templates/skills.html
+++ b/Code/templates/skills.html
@@ -2,7 +2,7 @@
 
 {% block css %}{% endblock css %}
 
-{% block title %} Skills {% endblock %}
+{% block title %} {{ super() }} -  Skills {% endblock %}
 {% block body %}
 
 
