--- a/Code/static/css/basedesign.css
+++ b/Code/static/css/basedesign.css
@@ -2,12 +2,9 @@ body {
 background-color:  #333;
 box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
     display: block;
-
-/*background:linear-gradient(to right, #004aad, #00549d, #005681, #005464, #2f4f4f);
-   /* background: linear-gradient(to bottom, #004aad, #00549d, #005681, #005464, #2f4f4f);
-
- /* background-image: linear-gradient(to bottom, #004aad, #00549d, #005681, #005464, #2f4f4f);*/
 }
+
+
 #footer {
     background-color: firebrick;
 }
@@ -44,8 +41,8 @@ hr{
 
 }
 
-#footersticky{
-    position: relative;
+.footersticky{
+   position: relative;
    left: 0;
    bottom: 0;
    width: 100%;
