--- a/Code/templates/about.html
+++ b/Code/templates/about.html
@@ -4,7 +4,7 @@
 
 {% endblock css %}
 
-{% block title %} About {% endblock %}
+{% block title %} {{ super() }} - About {% endblock %}
 {% block body %}
 
     <div class="container">
