--- a/Code/templates/experience.html
+++ b/Code/templates/experience.html
@@ -2,7 +2,7 @@
 
 {% block css %}{% endblock css %}
 
-{% block title %} Experience {% endblock %}
+{% block title %} {{ super() }} -  Experience {% endblock %}
 {% block body %}
     <div class="container">
         <h1 id="headingExperience">My Experience</h1>
