--- a/Code/templates/projects.html
+++ b/Code/templates/projects.html
@@ -4,7 +4,7 @@
 
 {% endblock css %}
 
-{% block title %} Projects {% endblock %}
+{% block title %} {{ super() }} - Projects {% endblock %}
 {% block body %}
 
     <!-- Page Content -->
