Reformat the Code

--- a/Code/templates/base.html
+++ b/Code/templates/base.html
@@ -86,7 +86,8 @@
 
 <!-- Footer -->
 
-<footer class="font-small pt-3 bg-blue footersticky" style="background-color: #004aad" ;">
+<footer class="font-small pt-3 bg-blue footersticky" style="background-color: #004aad" ;
+">
 
 <div class="container">
 
