--- a/Code/templates/experience.html
+++ b/Code/templates/experience.html
@@ -8,162 +8,169 @@
         <h1 id="headingExperience">My Experience</h1>
 
         <div class="jumbotron my-4 ">
-        <div id="education">
+            <div id="education">
                 <hr>
-            <h3 class="headingExperience">Education</h3>
+                <h3 class="headingExperience">Education</h3>
 
-            <div class="elementExperience">
-                <h5>Concordia University</h5>
-                <img class="logo" src="static/images/concordia-logo.jpg" alt="ConU Logo">
-                <p> B.Eng. in Software Engineering (COOP)</p>
-                <p>Montreal, Canada</p>
-                <p>2019 - 2023</p>
-                <p> GPA: 3.9/4.3</p>
-                <h7>As a student I...</h7>
-                <ul>
-                    <li>was the Sponsorship Director of ConUHacks (largest hackathon in Quebec) with a total of 800
-                        participants.
-                    </li>
-                </ul>
-                <h7> Relevant Courses:</h7>
-                <ul>
-                    <li>Discrete Mathematics</li>
-                    <li>Object-Oriented Programming I&II in JAVA</li>
-                    <li>System Hardware</li>
-                    <li>Web Programming</li>
-                </ul>
+                <div class="elementExperience">
+                    <h5>Concordia University</h5>
+                    <img class="logo" src="static/images/concordia-logo.jpg" alt="ConU Logo">
+                    <p> B.Eng. in Software Engineering (COOP)</p>
+                    <p>Montreal, Canada</p>
+                    <p>2019 - 2023</p>
+                    <p> GPA: 3.9/4.3</p>
+                    <h7>As a student I...</h7>
+                    <ul>
+                        <li>was the Sponsorship Director of ConUHacks (largest hackathon in Quebec) with a total of 800
+                            participants.
+                        </li>
+                    </ul>
+                    <h7> Relevant Courses:</h7>
+                    <ul>
+                        <li>Discrete Mathematics</li>
+                        <li>Object-Oriented Programming I&II in JAVA</li>
+                        <li>System Hardware</li>
+                        <li>Web Programming</li>
+                    </ul>
 
+                </div>
+
+                <div class="elementExperience">
+                    <h5>College Bois-De-Boulogne (CEGEP)</h5>
+                    <img class="logo" src="static/images/bdeb-logo.png" alt="BdeB Logo">
+                    <p> DEC in Computer Science</p>
+                    <p>Montreal, Canada</p>
+                    <p>2017 - 2019</p>
+                    <p> R-Score: 32.2 (85%)</p>
+                    <h7>As a student I...</h7>
+                    <ul>
+                        <li>was Awarded a Scholarship for Academic Commitment</li>
+                        <li>Acquired hands-on programming skills in Java</li>
+                </div>
+                <hr>
             </div>
 
-            <div class="elementExperience">
-                <h5>College Bois-De-Boulogne (CEGEP)</h5>
-                <img class="logo" src="static/images/bdeb-logo.png" alt="BdeB Logo">
-                <p> DEC in Computer Science</p>
-                <p>Montreal, Canada</p>
-                <p>2017 - 2019</p>
-                <p> R-Score: 32.2 (85%)</p>
-                <h7>As a student I...</h7>
-                <ul>
-                    <li>was Awarded a Scholarship for Academic Commitment</li>
-                    <li>Acquired hands-on programming skills in Java</li>
+            <div id="work">
+                <h3 class="headingExperience">Work</h3>
+
+                <div class="elementExperience">
+                    <h5>Ciena Corporation</h5>
+                    <img class="logo" src="static/images/ciena_logo.png" alt="Ciena Logo">
+                    <p> Business Intelligence Developer Intern</p>
+                    <p>Montreal, Canada</p>
+                    <p>May 2019 - August 2019</p>
+                    <h7>As an intern I...</h7>
+                    <ul>
+                        <li>Led the developmment of an upcoming new internal machine learning application to process
+                            supplier's
+                            contract files with Amazon's <strong>AWS</strong> services (Textract, S3) and <strong>IBM
+                                Watson</strong>
+                            (Discovery, Compare & Comply) with the use of <strong>Python.</strong>
+                        </li>
+                        <li>
+                            Designed the entire architecture/documentation of the project.
+                        </li>
+                        <li>Worked on existing projects by assisting with data normalization and tools development by
+                            building reports on
+                            <strong>Alteryx</strong> and <strong>PowerBI</strong> using <strong>mySQL</strong>.
+                        </li>
+                    </ul>
+
+
+                </div>
+
+                <div class="elementExperience">
+                    <h5>Multi-Secure Inc.</h5>
+                    <img class="logo" src="static/images/multinetwork.png" alt="Multi-Secure Logo">
+                    <p> Freelance Web Developer</p>
+                    <p>Montreal, Canada</p>
+                    <p>July 2019</p>
+                    <h7>As a freelancer I...</h7>
+                    <ul>
+                        <li>Designed a smart-home website for demo purposes (contract).
+                        </li>
+
+                    </ul>
+
+
+                </div>
+
+                <div class="elementExperience">
+                    <h5>Freelancer Producer/Director</h5>
+                    <p>Montreal, Canada</p>
+                    <p>2013-2018</p>
+                    <h7>As a video producer I...</h7>
+                    <ul>
+                        <li>Produced a 20 min documentary by leading a crowd-funding campaign, organizing a premiere,
+                            and filming
+                            people at the age of 14 years old.
+                        </li>
+                        <li>Directed an award winning short film while leading a team of 6 people. <a class="colorLink"
+                                                                                                      href="https://www.youtube.com/watch?v=DKX8Kj0apNI&t=3s">(link).</a>
+                        </li>
+                        <li>Filmed <a class="colorLink"
+                                      href="https://www.youtube.com/watch?v=VMzfZBEQPXs&list=PL-yR4TJNG_3jbudY21DvddcPtceDmYIKc">promotional
+                            videos </a> for Desjardins, Ministry of Education, and College Beaubois.
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="elementExperience">
+                    <h5>IKEA Montreal</h5>
+                    <img class="logo" src="static/images/ikea-logo.png" alt="Ikea Logo">
+                    <p> Delivery & Handout Department</p>
+                    <p>Montreal, Canada</p>
+                    <p>June 2018 - November 2018</p>
+                </div>
+
+                <div class="elementExperience">
+                    <h5>College Beaubois</h5>
+                    <img class="logo" src="static/images/beaubois-logo.png" alt="College Beaubois Logo">
+                    <p> IT Support Technician</p>
+                    <p>Montreal, Canada</p>
+                    <p>June - August 2016</p>
+                </div>
+
+                <hr>
             </div>
-            <hr>
+            <div id="academicsocieties">
+                <h3 class="headingExperience">Academic Societies</h3>
+
+                <div class="elementExperience">
+                    <h5>HackConcordia</h5>
+                    <img class="logo" src="static/images/conulogo.png" alt="Hack Concordia Logo">
+                    <p>Sponsorship Director</p>
+                    <p>Montreal, Canada</p>
+                    <p>October 2019 - Present</p>
+                    <ul>
+                        <li>Worked with a team of 20 student to create the <a class="colorLink"
+                                                                              href="https://conuhacks.io/">biggest
+                            hackathon in Montreal</a> and raised a total of
+                            <strong>115 000$</strong> through company outreach.
+                        </li>
+                        <li>Ensured companies extract value from the experience.
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="elementExperience">
+                    <h5>College Beaubois</h5>
+                    <img class="logo" src="static/images/beaubois-logo.png" alt="Beaubois Logo">
+
+                    <p>Creation of a Hackerspace</p>
+                    <p>Montreal, Canada</p>
+                    <p>2016-2017</p>
+                    <ul>
+                        <li>Joined a committee to set up a workspace where people share their interest in technology,
+                            meet and
+                            work on their projects, and learn from each other.
+                        </li>
+
+                    </ul>
+                </div>
+
+
+            </div>
         </div>
-
-        <div id="work">
-            <h3 class="headingExperience">Work</h3>
-
-            <div class="elementExperience">
-                <h5>Ciena Corporation</h5>
-                <img class="logo" src="static/images/ciena_logo.png" alt="Ciena Logo">
-                <p> Business Intelligence Developer Intern</p>
-                <p>Montreal, Canada</p>
-                <p>May 2019 - August 2019</p>
-                <h7>As an intern I...</h7>
-                <ul>
-                    <li>Led the developmment of an upcoming new internal machine learning application to process
-                        supplier's
-                        contract files with Amazon's <strong>AWS</strong> services (Textract, S3) and <strong>IBM
-                            Watson</strong>
-                        (Discovery, Compare & Comply) with the use of <strong>Python.</strong>
-                    </li>
-                    <li>
-                        Designed the entire architecture/documentation of the project.
-                    </li>
-                    <li>Worked on existing projects by assisting with data normalization and tools development by
-                        building reports on
-                        <strong>Alteryx</strong> and <strong>PowerBI</strong> using <strong>mySQL</strong>.
-                    </li>
-                </ul>
-
-
-            </div>
-
-            <div class="elementExperience">
-                <h5>Multi-Secure Inc.</h5>
-                <img class="logo" src="static/images/multinetwork.png" alt="Multi-Secure Logo">
-                <p> Freelance Web Developer</p>
-                <p>Montreal, Canada</p>
-                <p>July 2019</p>
-                <h7>As a freelancer I...</h7>
-                <ul>
-                    <li>Designed a smart-home website for demo purposes (contract).
-                    </li>
-
-                </ul>
-
-
-            </div>
-
-             <div class="elementExperience">
-                <h5>Freelancer Producer/Director</h5>
-                <p>Montreal, Canada</p>
-                <p>2013-2018</p>
-                <h7>As a video producer I...</h7>
-                <ul>
-                    <li>Produced a 20 min documentary by leading a crowd-funding campaign, organizing a premiere, and filming
-                        people at the age of 14 years old.
-                    </li>
-                    <li>Directed an award winning short film while leading a team of 6 people. <a class="colorLink" href="https://www.youtube.com/watch?v=DKX8Kj0apNI&t=3s">(link).</a>
-                    </li>
-                     <li>Filmed <a class="colorLink" href="https://www.youtube.com/watch?v=VMzfZBEQPXs&list=PL-yR4TJNG_3jbudY21DvddcPtceDmYIKc">promotional videos </a> for Desjardins, Ministry of Education, and College Beaubois.
-                    </li>
-                </ul>
-            </div>
-
-            <div class="elementExperience">
-                <h5>IKEA Montreal</h5>
-                <img class="logo" src="static/images/ikea-logo.png" alt="Ikea Logo">
-                <p> Delivery & Handout Department</p>
-                <p>Montreal, Canada</p>
-                <p>June 2018 - November 2018</p>
-            </div>
-
-              <div class="elementExperience">
-                <h5>College Beaubois</h5>
-                <img class="logo" src="static/images/beaubois-logo.png" alt="College Beaubois Logo">
-                <p> IT Support Technician</p>
-                <p>Montreal, Canada</p>
-                <p>June - August 2016</p>
-              </div>
-
-            <hr>
-        </div>
-        <div id="academicsocieties">
-            <h3 class="headingExperience">Academic Societies</h3>
-
-            <div class="elementExperience">
-                <h5>HackConcordia</h5>
-                <img class="logo" src="static/images/conulogo.png" alt="Hack Concordia Logo">
-                <p>Sponsorship Director</p>
-                <p>Montreal, Canada</p>
-                <p>October 2019 - Present</p>
-                <ul>
-                    <li>Worked with a team of 20 student to create the <a class="colorLink"  href="https://conuhacks.io/">biggest hackathon in Montreal</a> and raised a total of
-                        <strong>115 000$</strong> through company outreach.
-                    </li>
-                    <li>Ensured companies extract value from the experience.
-                    </li>
-                </ul>
-             </div>
-
-               <div class="elementExperience">
-                <h5>College Beaubois</h5>
-                   <img class="logo" src="static/images/beaubois-logo.png" alt="Beaubois Logo">
-
-                <p>Creation of a Hackerspace</p>
-                <p>Montreal, Canada</p>
-                <p>2016-2017</p>
-                <ul>
-                    <li>Joined a committee to set up a workspace where people share their interest in technology, meet and
-                        work on their projects, and learn from each other.
-                    </li>
-
-                </ul>
-             </div>
-
-
-        </div>
-         </div>
     </div>
 {% endblock %}
