--- a/Code/templates/projects.html
+++ b/Code/templates/projects.html
@@ -9,7 +9,7 @@
 
     <!-- Page Content -->
     <div class="container">
-       <h1 class="display-3 text-light">My Projects</h1>
+        <h1 class="display-3 text-light">My Projects</h1>
         <!-- Page Features -->
         <div class="row text-center">
 
@@ -93,7 +93,8 @@
         <!-- Jumbotron Header -->
         <header class="jumbotron my-4">
             <h1 class="display-4 text-dark">Other Projects</h1>
-            <p class="lead text-dark">You can also go take a look at my github for other projects. Although I'm currently a student, I'm always looking for new projects! My inbox is always open!</p>
+            <p class="lead text-dark">You can also go take a look at my github for other projects. Although I'm
+                currently a student, I'm always looking for new projects! My inbox is always open!</p>
             <a href="https://github.com/martinsenecal" class="btn btn-primary btn-lg">My GitHub Profile</a>
         </header>
 
