--- a/Code/static/css/basedesign.css
+++ b/Code/static/css/basedesign.css
@@ -1,6 +1,6 @@
 body {
-background-color:  #333;
-box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
+    background-color: #333;
+    box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
     display: block;
 }
 
@@ -15,35 +15,38 @@ box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
 }
 
 #link {
-color: white;
+    color: white;
 
 }
 
-h1,h2,h3,h4,h5,h6,h7,td,thead,p{
-    color:black;
+h1, h2, h3, h4, h5, h6, h7, td, thead, p {
+    color: black;
 
 }
 
-i{
-color:white;}
-
-
-a{
-   color: white;
+i {
+    color: white;
 }
-hr{
-    background-color:  #004aad;
+
+
+a {
+    color: white;
+}
+
+hr {
+    background-color: #004aad;
     height: 2px;
 }
-.button{
-    background-color:  #333;
+
+.button {
+    background-color: #333;
     box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
 
 }
 
-.footersticky{
-   position: relative;
-   left: 0;
-   bottom: 0;
-   width: 100%;
+.footersticky {
+    position: relative;
+    left: 0;
+    bottom: 0;
+    width: 100%;
 }
