--- a/Code/templates/connect.html
+++ b/Code/templates/connect.html
@@ -1,6 +1,3 @@
-
-
-
 {% extends "base.html" %}
 
 {% block css %}{% endblock css %}
@@ -20,14 +17,14 @@
                     enter your email, and I will send it to you right away.</p>
 
                 <div id="formEmail">
-                <form class="form-inline">
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" placeholder="Enter email" name="email">
+                    <form class="form-inline">
+                        <label for="email">Email:</label>
+                        <input type="email" id="email" placeholder="Enter email" name="email">
 
-                    <button type="submit">Submit</button>
+                        <button type="submit">Submit</button>
 
 
-                </form>
+                    </form>
                 </div>
 
                 <p class="lead font-weight-normal text-justify">If you are curious or want to know more about me, don't
@@ -36,7 +33,8 @@
 
 
                 <div id="btncenter">
-                    <button onclick="window.location.href = '/chatbot';" type="button" id="btnchatbot">Marty:ChatBot</button>
+                    <button onclick="window.location.href = '/chatbot';" type="button" id="btnchatbot">Marty:ChatBot
+                    </button>
                 </div>
 
                 <br>
